--- a/ejercicios/String/modTextAPI/index.html
+++ b/ejercicios/String/modTextAPI/index.html
@@ -15,7 +15,8 @@
   <script defer src="../../../js/setLocalStorage.js" type="text/javascript"></script>
   <script defer src="../../../js/localStorage.js" type="text/javascript"></script>
 
-  <script defer src="./js/functions.js" type="text/javascript"></script>
+  <script defer src="./js/api.js" type="text/javascript"></script>
+  <script defer src="../js/functions.js" type="text/javascript"></script>
   <script defer src="../../js/scriptAct.js" type="text/javascript"></script>
   
   <script defer src="../../../js/logout.js" type="text/javascript"></script>
@@ -105,7 +106,7 @@
               <li><a class="dropdown-item" href="../../index.html" id="modText">Modificar texto</a></li>
               <li><a class="dropdown-item" href="../../index.html" id="modTextAPI">Modificar texto API</a></li>
             </ul>
-
+          </li>
 
         </ul>
       </div>
@@ -125,29 +126,44 @@
 
     <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Minicalculadora</h5>
-          <form id="calculadora">
+          <h5 class="card-title">Modificador de texto + API</h5>
+          <form id="modText">
 
-            <div class="container-fluid text-center p-2">
-              <input id="valor1" type="number" name="valor1">
-              <input id="valor2" type="number" name="valor2">
+            <div class="container-fluid text-center p-2" id="contText">
+              <!-- <input id="texto" type="text" name="texto"> -->
+              <textarea name="texto" id="texto" rows="5" cols="60"></textarea>
             </div>
 
             <div class="container-fluid text-center p-2">
-              <input class="operador" id="sumar" type="button" name="sumar" value="+">
-              <input class="operador" id="restar" type="button" name="restar" value="-">
-              <input class="operador" id="multiplicar" type="button" name="multiplicar" value="x">
-              <input class="operador" id="dividir" type="button" name="dividir" value="/">
-              <input class="operador" id="resto" type="button" name="resto" value="%">
-              <input class="operador" id="factorial" type="button" name="factorial" value="!">
-              <input class="operador" id="entera" type="button" name="entero" value="_.">
-              <input class="operador" id="decimal" type="button" name="decimal" value="._">
+                <input class="operador" id="upperAll" type="button" name="upperAll" value="A-Z">
+                <input class="operador" id="lowerAll" type="button" name="lowerAll" value="a-z">
+                <input class="operador" id="upperFirst" type="button" name="upperFirst" value="A_">
+                <input class="operador" id="upperLast" type="button" name="upperLast" value="_Z">
+                <input class="operador" id="lowerFirst" type="button" name="lowerFirst" value="a_">
+                <input class="operador" id="lowerLast" type="button" name="lowerLast" value="_z">
+                <input class="operador" id="upperVocal" type="button" name="upperVocal" value="AEIOU">
+                <input class="operador" id="minusVocal" type="button" name="minusVocal" value="aeiou">
+                <input class="operador" id="upperConst" type="button" name="upperConst" value="CONST">
+                <input class="operador" id="lowerConst" type="button" name="lowerConst" value="const">
+            </div>
+
+            <div class="container-fluid text-center p-2">
+                <input class="operador" id="random" type="button" name="random" value="Random">
+                <input class="operador" id="stop" type="button" name="stop" value="Parar">
+                <input class="operador" id="fast" type="button" name="fast" value="Rápido">
+                <input class="operador" id="slow" type="button" name="slow" value="Lento">
+
+            </div>
+
+
+            <div class="container-fluid text-center p-2">
+              <input class="operador" id="joke" type="button" name="joke" value="Joke">
+
             </div>
 
 
           </form>
 
-          <p class="card-text" >Resultado: <strong id="resultado"></strong></p>
 
           <a href="../../index.html" class="btn botEj">Página principal</a>
         </div>
