--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -10,10 +10,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
-  <script defer src="../js/getCookie.js" type="text/javascript"></script>
-  <script defer src="../js/deleteCookie.js" type="text/javascript"></script>
-  <script defer src="../js/setCookie.js" type="text/javascript"></script>
-  <script defer src="../js/cookie.js" type="text/javascript"></script>
+  <script defer src="../js/getLocalStorage.js" type="text/javascript"></script>
+  <script defer src="../js/deleteLocalStorage.js" type="text/javascript"></script>
+  <script defer src="../js/setLocalStorage.js" type="text/javascript"></script>
+  <script defer src="../js/localStorage.js" type="text/javascript"></script>
 
   <script defer src="./js/loadExercise.js" type="text/javascript"></script>
   <script defer src="./js/script.js" type="text/javascript"></script>
@@ -99,6 +99,19 @@
             <ul class="dropdown-menu desplegable">
               <li><a class="dropdown-item" href="#" id="minicalculadora">Minicalculadora</a></li>
               <li><a class="dropdown-item" href="#" id="conversorbases">Conversor bases</a></li>
+            </ul>
+          </li>
+
+
+
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              String
+            </a>
+            <ul class="dropdown-menu desplegable">
+              <li><a class="dropdown-item" href="#" id="modText">Modificar texto</a></li>
+              <li><a class="dropdown-item" href="#" id="modTextAPI">Modificar texto API</a></li>
             </ul>
           </li>
 
